// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert EditorJS data to JSX Render table should render table 1`] = `
<table>
  <tr>
    <th>
      Name
    </th>
    <th>
      Age
    </th>
  </tr>
  <tr>
    <td>
      Paul
    </td>
    <td>
      12
    </td>
  </tr>
  <tr>
    <td>
      Jude
    </td>
    <td>
      13
    </td>
  </tr>
  <tr>
    <td>
      Hilda
    </td>
    <td>
      10
    </td>
  </tr>
  <tr>
    <td>
      Rossana
    </td>
    <td>
      11
    </td>
  </tr>
</table>
`;

exports[`Convert EditorJS data to JSX render header should render h1 with className 1`] = `
<h1
  className="class-name"
>
  Editor.js
</h1>
`;

exports[`Convert EditorJS data to JSX render header should render h2 with className 1`] = `
<h2
  className="class-name"
>
  Editor.js
</h2>
`;

exports[`Convert EditorJS data to JSX render header should render h3 with className 1`] = `
<h3
  className="class-name"
>
  Editor.js
</h3>
`;

exports[`Convert EditorJS data to JSX render header should render h4 with className 1`] = `
<h4
  className="class-name"
>
  Editor.js
</h4>
`;

exports[`Convert EditorJS data to JSX render header should render h5 with className 1`] = `
<h5
  className="class-name"
>
  Editor.js
</h5>
`;

exports[`Convert EditorJS data to JSX render header should render h6 with className 1`] = `
<h6
  className="class-name"
>
  Editor.js
</h6>
`;

exports[`Convert EditorJS data to JSX render lists should render list item 1`] = `
<li
  className="class-name"
>
  It is a block-styled editor
</li>
`;

exports[`Convert EditorJS data to JSX render lists should render list item as child 1`] = `
<li
  className="class-name"
>
  It is a block-styled editor
</li>
`;

exports[`Convert EditorJS data to JSX render lists should render lists 1`] = `
<ul>
  <li
    className="item-class-name"
  >
    It is a block-styled editor
  </li>
  <li
    className="item-class-name"
  >
    It returns clean data output in JSON
  </li>
  <li
    className="item-class-name"
  >
    Designed to be extendable and pluggable with a simple API
  </li>
</ul>
`;

exports[`Convert EditorJS data to JSX render lists should render lists with children 1`] = `
<ul
  className="class-name"
>
  <li
    className="item-class-name"
  >
    It is a block-styled editor
  </li>
  <li
    className="item-class-name"
  >
    It returns clean data output in JSON
  </li>
  <li
    className="item-class-name"
  >
    Designed to be extendable and pluggable with a simple API
  </li>
</ul>
`;

exports[`Convert EditorJS data to JSX render paragraph should render a pragraph with className 1`] = `
<p
  className="class-name"
>
  Editor.js
</p>
`;

exports[`Convert EditorJS data to JSX should render conversion 1`] = `
Array [
  <h2>
    Editor.js
  </h2>,
  <p>
    Hey. Meet the new Editor. On this page you can see it in action — try to edit this text.
  </p>,
  <h3>
    Key features
  </h3>,
  <ul>
    <li>
      It is a block-styled editor
    </li>
    <li>
      It returns clean data output in JSON
    </li>
    <li>
      Designed to be extendable and pluggable with a simple API
    </li>
  </ul>,
  <h3>
    What does it mean «block-styled editor»
  </h3>,
  <p>
    Workspace in classic editors is made of a single contenteditable element, used to create different HTML markups. Editor.js &lt;mark class="cdx-marker"&gt;workspace consists of separate Blocks: paragraphs, headings, images, lists, quotes, etc&lt;/mark&gt;. Each of them is an independent contenteditable element (or more complex structure) provided by Plugin and united by Editor's Core.
  </p>,
  <p>
    There are dozens of &lt;a href="https://github.com/editor-js"&gt;ready-to-use Blocks&lt;/a&gt; and the &lt;a href="https://editorjs.io/creating-a-block-tool"&gt;simple API&lt;/a&gt; for creation any Block you need. For example, you can implement Blocks for Tweets, Instagram posts, surveys and polls, CTA-buttons and even games.
  </p>,
  <h3>
    What does it mean clean data output
  </h3>,
  <p>
    Classic WYSIWYG-editors produce raw HTML-markup with both content data and content appearance. On the contrary, Editor.js outputs JSON object with data of each Block. You can see an example below
  </p>,
  <p>
    Given data can be used as you want: render with HTML for &lt;code class="inline-code"&gt;Web clients&lt;/code&gt;, render natively for &lt;code class="inline-code"&gt;mobile apps&lt;/code&gt;, create markup for &lt;code class="inline-code"&gt;Facebook Instant Articles&lt;/code&gt; or &lt;code class="inline-code"&gt;Google AMP&lt;/code&gt;, generate an &lt;code class="inline-code"&gt;audio version&lt;/code&gt; and so on.
  </p>,
  <p>
    Clean data is useful to sanitize, validate and process on the backend.
  </p>,
  <p>
    We have been working on this project more than three years. Several large media projects help us to test and debug the Editor, to make it's core more stable. At the same time we significantly improved the API. Now, it can be used to create any plugin for any task. Hope you enjoy. 😏
  </p>,
]
`;
